# coursework_projector

./: .pre-commit-config.yaml  1.ipynb  Feature engineering.py  ObjectsTextSimilarityModel.pkl  README.md  Validation.ipynb  app.py  bestmodel.py  cluster_numbers.ipynb  filter.py  models.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
data/: filter_data_recipes.csv  recipes_val_indexes.txt  train_data_recipes_encoded.csv
notebooks/: Validation.ipynb
recipe_recomendation/: feature_eng_funcs.py  filter.py  models.py
recipe_recommendation/: 1.ipynb  Validation.ipynb  app.py  bestmodel.py  dataclasses.py  feature_eng.py  feature_eng_funcs.py  filter.py  filter_info.py  models.py  paths.py  recipe_info.py
scripts/: app.py  feature_engineering.py  preprocess_train_data.py
tests/: tests.py
tests/unit/: test_feature_eng.py  test_model_osf.py  test_model_ots.py  test_models.py
tests/unit_tests/: test_all.py
