[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0", "setuptools-scm >= 7"]

[project]
name = "recipe_recommendation"
version = '0.0.1'
requires-python = ">= 3.8"
dependencies = [
    "huggingface-hub == 0.23.4",
    "numpy == 1.26.4",
    "pandas == 2.2.2",
    "pytest == 8.2.2",
    "requests == 2.32.3",
    "scikit-learn == 1.5.1",
    "scipy == 1.14.0",
    "sentence-transformers == 3.0.1",
    "sympy == 1.13.0",
    "torch == 2.3.1",
    "transformers == 4.42.3"
]

[tool.mypy]
files = ["recipe_recommendation"]
#plugins = ["numpy.typing.mypy_plugin"]
pretty = true
show_error_codes = true
strict = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "plotly.*",
  "pandas.*",
  "scipy.*",
  "sklearn.*"
]
