[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0", "setuptools-scm >= 7"]

[tool.setuptools]
packages = ["recipe_recommendation"]

[project]
name = "recipe_recommendation"
version = '0.0.1'
requires-python = ">= 3.11"
dependencies = [
    "huggingface-hub",
    "numpy < 2",
    "pandas",
    "pytest",
    "requests",
    "scikit-learn",
    "scipy",
    "sentence-transformers == 3.0.0",
    "sympy",
    "torch",
    "transformers",
    "inflect",
    "pattern"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "ruff",
    "mypy"
    ]

[tool.mypy]
files = ["recipe_recommendation"]
plugins = ["numpy.typing.mypy_plugin"]
pretty = true
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "scipy.*",
  "sklearn.*",
  "inflect.*",
  "transformers.*",
  "pattern.text.en.*",
  "nltk.*"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "I"          # isort
]
